Fix domain responsiveness issue on mobile view and increased transition of flipping cards

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
   position: relative;
   width: 100%;
   height: 100%;
-  transition: transform 0.6s;
+  transition: transform 1.2s;
   transform-style: preserve-3d;
   border-radius: 1rem;
 }
